tests/fixtures/valid/escape_tab.mmd
flowchart TD
    Start --> A[println 'col1\\tcol2']
    A --> End
