tests/fixtures/invalid/end_with_outgoing_edge.mmd
flowchart TD
    Start --> End
    End --> A[x = 1]
    A --> End
